tests/lean/minimize_errors.lean.expected.out
minimize_errors.lean:2:0: error: type mismatch, expression
  λ (a : ℕ), a
has type
  ℕ → ℕ
but is expected to have type
  ℕ → ℕ → ℕ
minimize_errors.lean:1:4: warning: declaration 'f' uses sorry
minimize_errors.lean:1:4: warning: declaration 'f.equations._eqn_1' uses sorry
f : ℕ → ℕ → ℕ
g : ℕ → ℕ → ℕ
def g : ℕ → ℕ → ℕ :=
f
def h : ℕ → ℕ → ℕ :=
h._main
